syntax = "proto3";

option java_package = "com.rookmotion.rook_sdk_health_connect.proto";
option java_outer_classname = "ProtobufModels";
option java_multiple_files = true;

enum RookEnvironmentProto {
  SANDBOX = 0;
  PRODUCTION = 1;
}

enum AvailabilityStatusProto {
  INSTALLED = 0;
  NOT_INSTALLED = 1;
  NOT_SUPPORTED = 2;
}

enum RequestPermissionsStatusProto {
  REQUEST_SENT = 0;
  ALREADY_GRANTED = 1;
}

enum DataSourceTypeProto {
  GARMIN = 0;
  OURA = 1;
  POLAR = 2;
  FITBIT = 3;
  WITHINGS = 4;
  WHOOP = 5;
}

enum SyncStatusProto {
  SYNCED = 0;
  RECORDS_NOT_FOUND = 1;
}

enum SummarySyncTypeProto {
  SLEEP = 0;
  PHYSICAL = 1;
  BODY = 2;
}

enum EventSyncTypeProto {
  ACTIVITY = 0;
  BLOOD_GLUCOSE = 1;
  BLOOD_PRESSURE = 2;
  BODY_METRICS = 3;
  HEART_RATE = 4;
  HYDRATION = 5;
  NUTRITION = 6;
  OXYGENATION = 7;
  TEMPERATURE = 8;
  STEPS = 9;
  CALORIES = 10;
}

enum BackgroundReadStatusProto {
  UNAVAILABLE = 0;
  PERMISSION_NOT_GRANTED = 1;
  PERMISSION_GRANTED = 2;
}

message RookConfigurationProto {
  string clientUUID = 1;
  string secretKey = 2;
  RookEnvironmentProto environment = 3;
  bool enableBackgroundSync = 4;
}

message DataSourceProto {
  string name = 1;
  string description = 2;
  string imageUrl = 3;
  bool connected = 4;
  string authorizationUrl = 5;
  bool authorizationUrlIsNull = 6;
}

message DataSourcesProtoListWrapper {
  repeated DataSourceProto dataSources = 1;
}

message HealthConnectPermissionsSummaryProto {
  bool dataTypesGranted = 1;
  bool dataTypesPartiallyGranted = 2;
  bool backgroundReadGranted = 3;
}

message AndroidPermissionsSummaryProto {
  bool permissionsGranted = 1;
  bool dialogDisplayed = 2;
}

message SyncStatusWithIntProto {
  SyncStatusProto syncStatus = 1;
  uint32 steps = 2;
}

message AuthorizedDataSourcesProto {
  uint32 oura = 1;
  uint32 polar = 2;
  uint32 whoop = 3;
  uint32 fitbit = 4;
  uint32 garmin = 5;
  uint32 withings = 6;
  uint32 dexcom = 7;
  uint32 appleHealth = 8;
  uint32 healthConnect = 9;
  uint32 android = 10;
}

message DailyCaloriesProto {
  double basal = 1;
  double active = 2;
}

message SyncStatusWithDailyCaloriesProto {
  SyncStatusProto syncStatus = 1;
  DailyCaloriesProto dailyCalories = 2;
}

message DataSourceAuthorizerProto {
  string dataSource = 1;
  bool authorized = 2;
  string authorizationUrl = 3;
  bool authorizationUrlIsNull = 6;
}

message PluginExceptionProto {
  sint32 id = 1;
  sint32 code = 2;
  string message = 3;
}

message ResultBooleanProto {
  oneof result {
    bool success = 1;
    PluginExceptionProto pluginExceptionProto = 2;
  }
}

message ResultInt64Proto {
  oneof result {
    int64 value = 1;
    PluginExceptionProto pluginExceptionProto = 2;
  }
}

message ResultDataSourcesProto {
  oneof result {
    DataSourcesProtoListWrapper dataSourcesProtoListWrapper = 1;
    PluginExceptionProto pluginExceptionProto = 2;
  }
}

message ResultRequestPermissionsStatusProto {
  oneof result {
    RequestPermissionsStatusProto requestPermissionsStatusProto = 1;
    PluginExceptionProto pluginExceptionProto = 2;
  }
}

message ResultSyncStatusProto {
  oneof result {
    SyncStatusProto syncStatusProto = 1;
    PluginExceptionProto pluginExceptionProto = 2;
  }
}

message ResultSyncStatusWithIntProto {
  oneof result {
    SyncStatusWithIntProto syncStatusWithIntProto = 1;
    PluginExceptionProto pluginExceptionProto = 2;
  }
}

message ResultAuthorizedDataSourcesProto {
  oneof result {
    AuthorizedDataSourcesProto authorizedDataSourcesProto = 1;
    PluginExceptionProto pluginExceptionProto = 2;
  }
}

message ResultSyncStatusWithDailyCaloriesProto {
  oneof result {
    SyncStatusWithDailyCaloriesProto syncStatusWithDailyCaloriesProto = 1;
    PluginExceptionProto pluginExceptionProto = 2;
  }
}

message ResultDataSourceAuthorizerProto {
  oneof result {
    DataSourceAuthorizerProto dataSourceAuthorizerProto = 1;
    PluginExceptionProto pluginExceptionProto = 2;
  }
}

message  ResultBackgroundReadStatusProto {
  oneof result {
    BackgroundReadStatusProto backgroundReadStatusProto = 1;
    PluginExceptionProto pluginExceptionProto = 2;
  }
}
